Edited wiki page through web user interface.

--- a/wiki/About.wiki
+++ b/wiki/About.wiki
@@ -1,4 +1,5 @@
 #summary About uri_grammar
+#labels Phase-Deploy
 
 = Introduction =
 
@@ -89,5 +90,3 @@ public:
 }}}
 
 `null_actions` doesn't actually do anything; it is provided as a convenience so that users don't have to write one of these every time they just want to instantiate a `uri_grammar` without any semantic actions (typically for testing).
-
-
